--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="col-md-1 hour">
           5PM
         </div>
-        <textarea class="col-md-10 description">
+        <textarea class="col-md-10 description"></textarea>
         </textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save" ></i></button>
       </div>
